fix: 목표 달성 시 core에서 알림 수신 받도록 함