@@ -1,6 +1,7 @@
 package dev.syntax.global.config;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
@@ -23,6 +24,8 @@ import dev.syntax.global.auth.jwt.JwtAccessDeniedHandler;
 import dev.syntax.global.auth.jwt.JwtAuthenticationEntryPoint;
 import dev.syntax.global.auth.jwt.JwtAuthenticationFilter;
 import dev.syntax.global.auth.jwt.JwtTokenProvider;
+import dev.syntax.global.core.ApiKeyAuthenticationFilter;
+import dev.syntax.global.core.CoreApiProperties;
 import lombok.RequiredArgsConstructor;
 
 /**
@@ -53,9 +56,20 @@ public class SecurityConfig {
 	private final JwtTokenProvider jwtTokenProvider;
 	private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
 	private final JwtAccessDeniedHandler jwtAccessDeniedHandler;
+	private final CoreApiProperties coreApiProperties;
 
 	@Value("${cors.allowed-origin-patterns}")
 	private String[] allowedOriginPatterns;
+
+	@Bean
+	public JwtAuthenticationFilter jwtAuthenticationFilter() {
+		return new JwtAuthenticationFilter(jwtTokenProvider);
+	}
+
+	@Bean
+	public ApiKeyAuthenticationFilter apiKeyAuthenticationFilter() {
+		return new ApiKeyAuthenticationFilter(coreApiProperties);
+	}
 
 	/**
 	 * SecurityFilterChain을 구성합니다.
@@ -104,13 +118,16 @@ public class SecurityConfig {
 					"/public/**",
 					"/sample/**",
 					"/docs/**",
-					"/actuator/**",
-						"/internal/**").permitAll()
+					"/actuator/**").permitAll()
+				.requestMatchers("/internal/**").authenticated()
+				.requestMatchers("/notifications/subscribe").authenticated()
 				.anyRequest().authenticated()
 			)
-			// UsernamePasswordAuthenticationFilter 전에 JWT 필터 등록
-			.addFilterBefore(new JwtAuthenticationFilter(jwtTokenProvider),
-				UsernamePasswordAuthenticationFilter.class);
+			// 필터 체인 순서:
+			// 1. API-KEY 필터 (내부 서버 요청 확인) -> `shouldNotFilter`를 통해 `/internal`만 처리
+			.addFilterBefore(apiKeyAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
+			// 2. JWT 필터 (클라이언트 요청 확인) -> `shouldNotFilter`를 통해 `/internal` 제외
+			.addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
 
 		return http.build();
 	}
@@ -157,7 +174,7 @@ public class SecurityConfig {
 		CorsConfiguration configuration = new CorsConfiguration();
 		configuration.setAllowedOriginPatterns(Arrays.asList(allowedOriginPatterns));
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-		configuration.setAllowedHeaders(Arrays.asList("*"));
+		configuration.setAllowedHeaders(List.of("*"));
 		configuration.setAllowCredentials(true);
 
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
